<resources>
    <string name="app_name">Student Info</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="forgot_password">Forgot password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_success">Successfully created</string>
    <string name="auth_failed">Authentication has failed</string>
    <string name="TAG">firebase-bug</string>
    <string name="action_reset">Reset email sent</string>
    <string name="action_auth_success">Login Success</string>
    <string name="action_email_failed">Send Email Failed</string>
    <string-array name="genres">
        <item>Major</item>
        <item>Software Enginnering</item>
        <item>Networking</item>
        <item>Artificial Intelligence</item>
        <item>Information Management</item>

    </string-array>
</resources>
